chore: regenerate config API client
