# openapi_config_client.yaml
@@ -16,6 +16,18 @@ servers:
   - url: "http://localhost:8080/api/v1"
     description: "Development Server"
 paths:
+  /health:
+    get:
+      summary: "Health Check"
+      description: "Returns a simple health check message."
+      operationId: "healthCheck"
+      responses:
+        "200":
+          description: "API available"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/HealthCheck"
   /configs:
     get:
       summary: "List all configurations"
@@ -29,7 +41,7 @@ paths:
           schema:
             $ref: "#/components/schemas/ApplicationContext"
       responses:
-        '200':
+        "200":
           description: "A list of configurations"
           content:
             application/json:
@@ -37,9 +49,9 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/ConfigurationDTO"
-        '400':
+        "400":
           description: "Bad request"
-        '500':
+        "500":
           description: "Internal server error"
       security: []
   /flags:
@@ -57,7 +69,7 @@ paths:
             format: uuid
             example: "123e4567-e89b-12d3-a456-426655440000"
       responses:
-        '200':
+        "200":
           description: "A list of feature flags"
           content:
             application/json:
@@ -65,14 +77,22 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/FeatureFlagDTO"
-        '400':
+        "400":
           description: "Bad request"
-        '500':
+        "500":
           description: "Internal server error"
       security: []
 
 components:
   schemas:
+    HealthCheck:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
+          example: "API available"
     ApplicationContext:
       type: string
       enum:
@@ -154,9 +174,14 @@ components:
             dpURL:
               type: string
               example: "https://dp.berlinskylarks.de"
+            errorReportingURL:
+              type:
+                - string
+                - "null"
+              example: "https://error-reporting.berlinskylarks.de"
         flagRelations:
           type:
             - object
             - "null"
           additionalProperties:
-            $ref: '#/components/schemas/FlagWithStatusDTO'
+            $ref: "#/components/schemas/FlagWithStatusDTO"
